# bestarc_lvgl_esp32s3

./: .gitignore  BTC_500DP_MAX_3端互控开发文档.md  BTC_500DP_MAX_OTA_communication protocol.md  BTC_500DP_MAX_communication protocol.md  CMakeLists.txt  README.md  bestarc_ui.md  communication protocol.md  files.txt  sdkconfig  sdkconfig.old
.augment/rules/: globalrules.md  project_structure.md
.augment/skills/k230-development/: SKILL.md
.augment/skills/k230-development/references/: K230_FFT_API.html  (+13 more)
.augment/skills/lvgl-skills/: SKILL.md
.augment/skills/planning-with-files-zh/: SKILL.md
.windsurf/: readme.md
.windsurf/rules/: karpathy-guidelines.md
.windsurf/skills/chinese-law-skills/: SKILL.md
.windsurf/skills/esp-idf-skills/: SKILL.md
.windsurf/skills/mineru/: SKILL.md
.windsurf/skills/pb03f/: SKILL.md
.windsurf/workflows/: lvgl-skills.md
components/espressif__esp_lcd_touch_cst816s/: esp_lcd_touch_cst816s.c
components/espressif__esp_lcd_touch_cst816s/include/: esp_lcd_touch_cst816s.h
components/lvgl/: lv_conf.h
main/: CMakeLists.txt  board.c  board.h  idf_component.yml  main.c
main/APP/: device_config.h
main/APP/ble/: ble_remote.c  ble_remote.h  ble_scan.c  ble_scan.h  ble_server.c  ble_server.h
main/APP/comm/: remote_button.c  remote_button.h  remote_nvs.c  remote_nvs.h  uart_comm.c  uart_comm.h
main/APP/ui/: CHIP_BG.c  RING_BG.c  demo_data.c  demo_data.h  left_arc.c  lighting.c  right_arc.c  ui_cmd.c  ui_cmd.h  ui_manager.c  ui_manager.h  ui_protocol.c  ui_protocol.h
main/APP/ui/fonts/: bestarc_BBHBogle_128.c  bestarc_BBHBogle_18.c  bestarc_BBHBogle_32.c  bestarc_BBHBogle_48.c  bestarc_BBHBogle_64.c  bestarc_BBHBogle_80.c
main/APP/ui/screens/: scr_dashboard.c  scr_dashboard.h
(+26 files in other folders)
